--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -85,6 +85,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {}, 
+   "outputs": [], 
+   "source": [
+    "filename = '../data/plant_atlas/Anther/Anther_20.tif'\n",
+    "maskname = '../data/plant_atlas/Anther_masks/Anther_20.tif'\n",
+    "\n",
+    "output_path = '../results/'\n",
+    "if not os.path.exists(output_path):\n",
+    "    os.makedirs(output_path, exist_ok=True)\n",
+    "\n",
+    "output_filename = 'cellstitch_sample_pred.npy'"
+   ]   
+  }, 
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
